--- a/cvven/css/user.css
+++ b/cvven/css/user.css
@@ -231,10 +231,22 @@ img {
     vertical-align: middle;
 }
 
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
+* {
+    box-sizing: border-box
+}
+
+body {
+    font-family: Verdana, sans-serif;
+    margin: 0
+}
+
+.mySlides {
+    display: none
+}
+
+img {
+    vertical-align: middle;
+}
 
 
 /* Slideshow container */
@@ -261,6 +273,7 @@ img {vertical-align: middle;}
     border-radius: 0 3px 3px 0;
     user-select: none;
     background-color: rgba(210, 210, 210, 0.616);
+    -webkit-user-select: none;
 }
 
 /* Position the "next button" to the right */
@@ -416,6 +429,8 @@ ul {
     padding: auto;
     margin-top: 2rem;
     width: 80%;
+    text-align: center;
+    vertical-align : middle;
 }
 
 th {
@@ -424,7 +439,7 @@ th {
     border: .1rem solid #ddd;
 }
 
-th{
+th {
     padding: auto;
     padding: 1rem;
     border: .1rem solid #ddd;
@@ -434,8 +449,11 @@ th.top-th {
     background-color: var(--green);
     padding: 1rem;
     text-transform: uppercase;
+    font-weight: 500;
 }
-tr,td {
+
+tr,
+td {
     padding: .2rem 3rem;
     background-color: #666;
     border: 1px solid #ddd;
@@ -485,14 +503,34 @@ td a {
 }
 
 .btn-delete:hover {
-    background-color: #25581a;
+    background-color: #861d11;
     color: #fff;
 }
 
+.btn-confirm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 7rem;
+    height: 2rem;
+    background-color: var(--blue);
+    border: 2px outset #fff;
+    border-radius: 1rem;
+    color: #fff;
+    transition: .3s;
+    margin-top: .5rem;
+}
+
+.btn-confirm:hover {
+    background-color: #15448a;
+    color: #fff;
+}
+
+
 .row {
     margin-top: -1rem;
-  }
-  
+}
+
 .message p {
     color: white;
     font-size: 1.5rem;
@@ -513,7 +551,6 @@ a:hover {
     font-size: 1em;
 }
 
-
 .container {
     font-family: 'Poppins', sans-serif;
     position: relative;
@@ -526,25 +563,25 @@ a:hover {
     margin-left: 5rem;
 }
 
-  .title_nouvelle_reservation {
+.title_nouvelle_reservation {
     margin-top: 1rem;
     margin-left: 5.5rem;
     font-size: 1.5rem;
-  }
+}
 
-  select {
+select {
     word-wrap: normal;
     width: 20rem;
     margin-bottom: .3rem;
     padding: .2rem 1rem;
     border-radius: .5rem;
-  }
+}
 
-  option {
+option {
     border-radius: .5rem;
-  }
+}
 
-  .form-control {
+.form-control {
     display: block;
     width: 100%;
     padding: .375rem .75rem;
@@ -559,26 +596,26 @@ a:hover {
     -moz-appearance: none;
     appearance: none;
     border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     width: 17rem;
-  }
+}
 
-  .col-form-label {
+.col-form-label {
     padding-top: calc(.375rem + 1px);
     padding-bottom: calc(.375rem + 1px);
     margin-bottom: 0;
     font-size: inherit;
     line-height: 1.5;
     margin-left: 2.3rem;
-  }
+}
 
-  .col-sm-10 {
+.col-sm-10 {
     flex: 0 0 auto;
     width: 83.33333333%;
     margin-left: 2rem;
-  }
+}
 
-  .modal-content {
+.modal-content {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -586,14 +623,30 @@ a:hover {
     pointer-events: auto;
     background-color: rgb(255, 255, 255);
     background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.2);
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: .5rem;
+    outline: 0;
+    margin-top: 4rem;
+    width: 26.5rem;
+}
+
+.modal-content-res {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    pointer-events: auto;
+    background-color: rgb(255, 255, 255);
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .2);
     border-radius: .5rem;
     outline: 0;
     margin-top: -4rem;
     width: 26.5rem;
-  }
 
-  .modal-footer {
+}
+
+.modal-footer {
     display: flex;
     flex-wrap: wrap;
     flex-shrink: 0;
@@ -603,44 +656,117 @@ a:hover {
     border-top: 1px solid #dee2e6;
     border-bottom-right-radius: calc(.3rem - 1px);
     border-bottom-left-radius: calc(.3rem - 1px);
-  }
+}
 
-  div.rows {
+div.rows {
     display: block;
     width: 170%;
     margin-top: -1rem;
     margin-left: -19rem;
-  }
+}
 
-  .switch {
+.switch {
     margin-left: 1rem;
-  }
+}
 
 
 section.king_card {
     display: flex;
 }
 
-  .card {
+.card {
     /* Add shadows to create the "card" effect */
+    position: relative;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.76);
     transition: 0.3s;
     width: 30%;
-    height: 37rem;
+    height: 38rem;
     margin-left: 5rem;
     margin-top: 3rem;
-  }
-  
-  /* On mouse-over, add a deeper shadow */
-  .card:hover {
+    border: 0;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
     box-shadow: 0 16px 20px 0 rgba(0, 0, 0, 0.623);
-  }
-  
-  /* Add some padding inside the card container */
-  .test {
+}
+
+/* Add some padding inside the card container */
+.test {
     padding: 2px 16px;
+}
+.card-header h4 {
+    margin: .5rem 0 .5rem 0;
+    padding-left: 1rem;
+    font-weight:bolder;
+}
+
+.progress-container {
+    width: 100%;
+    height: 8px;
+    background: #ccc;
+}
+
+.progress-bar {
+    height: 10px;
+    background: var(--green1);
+    width: 0%;
+}
+
+.content {
+    padding: 2px 16px;
+    overflow-y: scroll;
+}
+
+.prix h5 {
+    padding-top: .7rem;
+    font-weight: 400;
+    font-size: 1.15rem;
+}
+
+.ruban-prix {
+    opacity: .5;
+    font-size: 40px;
+    position: absolute;
+    top: 0rem;
+    right: 0;
+    color: #ffffff;
+    background: linear-gradient(90deg, rgb(8, 36, 0) 7%, rgb(13, 110, 13) 45%, rgb(35, 196, 35) 80%);
+    width: 290px;
+    height: 3rem;
+    -webkit-transition: all 400ms ease-out;
+    -moz-transition: all 400ms ease-out;
+    -o-transition: all 400ms ease-out;
+    -ms-transition: all 400ms ease-out;
+    transition: all 400ms ease-out;
+    text-align: right;
+    border-radius: 0% 0% 0% 100%;
+}
+
+.content .ruban-prix:hover {
+    opacity: 1;
+  }
+  .content .ruban-prix .prix {
+    height: 0;
+    opacity: 1;
+    transition-delay: 0s;
+    transition-duration: 0.4s;
+  }
+  .content .ruban-prix:hover .prix {
+    opacity: 1;
+    transform: translateX(-60px);
+    -webkit-transform: translateX(-60px);
   }
 
-  h4{
-    margin-top: 1rem;
+
+  .header {
+    background-color: #f1f1f1;
   }
+
+  
+  .progress-bar {
+    height: 8px;
+    background: #04AA6D;
+    width: 0%;
+  }
+  
